src/objects/Sales_Goals__c.object
<CustomObject>
    <description>Used to store monthly and quarterly sales goals per user.</description>
    <fields>
        <fullName>Goal_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Goal Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Goal_Period__c</fullName>
        <label>Goal Period</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Goal_Timeline__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Q1</fullName>
                </value>
                <value>
                    <fullName>Q2</fullName>
                </value>
                <value>
                    <fullName>Q3</fullName>
                </value>
                <value>
                    <fullName>Q4</fullName>
                </value>
                <value>
                    <fullName>January</fullName>
                </value>
                <value>
                    <fullName>February</fullName>
                </value>
                <value>
                    <fullName>March</fullName>
                </value>
                <value>
                    <fullName>April</fullName>
                </value>
                <value>
                    <fullName>May</fullName>
                </value>
                <value>
                    <fullName>June</fullName>
                </value>
                <value>
                    <fullName>July</fullName>
                </value>
                <value>
                    <fullName>August</fullName>
                </value>
                <value>
                    <fullName>September</fullName>
                </value>
                <value>
                    <fullName>October</fullName>
                </value>
                <value>
                    <fullName>November</fullName>
                </value>
                <value>
                    <fullName>December</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Goal_Timeline__c</fullName>
        <label>Goal Timeline</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Annually</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Goal_Type__c</fullName>
        <label>Goal Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Dollars</fullName>
                </value>
                <value>
                    <fullName>Volume</fullName>
                </value>
                <value>
                    <fullName>Locations</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Goal_Year__c</fullName>
        <defaultValue>&quot;2015&quot;</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter the 4-digit goal year (i.e., &quot;2015&quot;)</inlineHelpText>
        <label>Goal Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Goal__c</fullName>
        <label>Goal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Line_of_Business__c</fullName>
        <label>Line of Business</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Altair</fullName>
                </value>
                <value>
                    <fullName>Marchon</fullName>
                </value>
                <value>
                    <fullName>Optics</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Territory_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Territory Code</label>
        <length>22</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sales_Goals</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Sales Goal</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Line_of_Business__c</columns>
        <columns>Goal__c</columns>
        <columns>Goal_Name__c</columns>
        <columns>Goal_Type__c</columns>
        <columns>Goal_Period__c</columns>
        <columns>Goal_Year__c</columns>
        <columns>User__c</columns>
        <columns>Territory_Code__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>GOAL-{00000}</displayFormat>
        <label>Sales Goal Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Goals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>